# pptx-to-video

./: MANIFEST.in  README.md  main.py  pptx-to-video.py  pyproject.toml
.github/workflows/: build.yaml  code_checks.yaml  publish.yaml  testing.yaml
docs/_build/doctrees/: environment.pickle  index.doctree
src/: language_codes.py  logger.py  powerpoint.py  powerpoint_engine.py  video_constructer.py
src/pptx_to_video/: powerpoint_engine.py
tests/: test_language_codes.py  test_powerpoint_engine.py
tests/fixtures/: test.pptx
