[project]
name = "ppt-to-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage>=7.10.7",
    "deep-translator>=1.11.4",
    "gtts>=2.5.4",
    "moviepy>=2.2.1",
    "pytest>=8.4.2",
    "python-pptx>=1.0.2",
    "ruff>=0.13.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "ty>=0.0.1a21",
]
